--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
       <title>SE Factory</title>
       <link rel="stylesheet" href="./style/style.css" />
       <link rel="stylesheet" href="./style/utilities.css" />
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+         crossorigin="anonymous"
+         referrerpolicy="no-referrer" />
    </head>
    <body class="body">
       <div class="hero" id="home">
          <section class="hero-parent">
+            <header>
+               <nav>
+                  <img src="/assets/img/se-logo.svg" alt="" />
+                  <div class="openMenu" id="nav-btn"><i class="fa fa-bars"></i></div>
+               </nav>
+            </header>
             <div class="hero-section hero-left">
                <div class="hero-section hero-left color-overlay" id="color-overlay">
                   <div class="hero-details details-left" id="hero-left-details">
@@ -41,6 +53,43 @@
                         running and drive your success.
                      </p>
                      <div class="hero-btn right">#HIRE_TALENT</div>
+                  </div>
+               </div>
+            </div>
+            <div class="nav-menu">
+               <div class="inner-menu">
+                  <div class="left-menu">
+                     <ul>
+                        <li>Home</li>
+                        <li>Hello world!</li>
+                        <li>Milestones</li>
+                        <li>Programs</li>
+                        <li>Hire talent</li>
+                        <li>testimonials</li>
+                        <li>FAQs</li>
+                        <li>Contact us</li>
+                        <li>Partners</li>
+                        <li>Newsletter</li>
+                     </ul>
+                  </div>
+                  <div class="right-menu">
+                     <div class="account-credentials">
+                        <div class="header-credentials">
+                           <h1><span class="green-arrow">></span> Account</h1>
+                           <p>/* Login with existing or create a new account in order to apply to SEF programs */</p>
+                        </div>
+                        <div class="action-credentials">
+                           <div class="account-btn log-in">LOG IN</div>
+                           <div class="account-btn sign-up">SIGN UP</div>
+                        </div>
+                     </div>
+                     <div class="commercial-hr">
+                        <img src="./assets/img/hr-badge.svg" alt="" />
+                        <div class="commercial-hr commercial-details">
+                           <h1>Global Companies,<br />Meet Lebanese Talent</h1>
+                           <p>All You Need to Launch a Local Team</p>
+                        </div>
+                     </div>
                   </div>
                </div>
             </div>
