responsive hero and menu

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>SE Factory</title>
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@800&display=swap" rel="stylesheet" />
       <link rel="stylesheet" href="./style/style.css" />
       <link rel="stylesheet" href="./style/utilities.css" />
+      <link rel="stylesheet" href="./style/mobile.css" />
       <link
          rel="stylesheet"
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -15,6 +19,43 @@
    </head>
    <body class="body">
       <div class="hero" id="home">
+         <div class="nav-menu">
+            <div class="inner-menu">
+               <div class="left-menu">
+                  <ul>
+                     <li>Home</li>
+                     <li>Hello world!</li>
+                     <li>Milestones</li>
+                     <li>Programs</li>
+                     <li>Hire talent</li>
+                     <li>testimonials</li>
+                     <li>FAQs</li>
+                     <li>Contact us</li>
+                     <li>Partners</li>
+                     <li>Newsletter</li>
+                  </ul>
+               </div>
+               <div class="right-menu">
+                  <div class="account-credentials">
+                     <div class="header-credentials">
+                        <h1><span class="green-arrow">></span> Account</h1>
+                        <p>/* Login with existing or create a new account in order to apply to SEF programs */</p>
+                     </div>
+                     <div class="action-credentials">
+                        <div class="account-btn log-in">LOG IN</div>
+                        <div class="account-btn sign-up">SIGN UP</div>
+                     </div>
+                  </div>
+                  <div class="commercial-hr">
+                     <img src="./assets/img/hr-badge.svg" alt="" />
+                     <div class="commercial-hr commercial-details">
+                        <h1>Global Companies,<br />Meet Lebanese Talent</h1>
+                        <p>All You Need to Launch a Local Team</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
          <section class="hero-parent">
             <header>
                <nav>
@@ -53,43 +94,6 @@
                         running and drive your success.
                      </p>
                      <div class="hero-btn right">#HIRE_TALENT</div>
-                  </div>
-               </div>
-            </div>
-            <div class="nav-menu">
-               <div class="inner-menu">
-                  <div class="left-menu">
-                     <ul>
-                        <li>Home</li>
-                        <li>Hello world!</li>
-                        <li>Milestones</li>
-                        <li>Programs</li>
-                        <li>Hire talent</li>
-                        <li>testimonials</li>
-                        <li>FAQs</li>
-                        <li>Contact us</li>
-                        <li>Partners</li>
-                        <li>Newsletter</li>
-                     </ul>
-                  </div>
-                  <div class="right-menu">
-                     <div class="account-credentials">
-                        <div class="header-credentials">
-                           <h1><span class="green-arrow">></span> Account</h1>
-                           <p>/* Login with existing or create a new account in order to apply to SEF programs */</p>
-                        </div>
-                        <div class="action-credentials">
-                           <div class="account-btn log-in">LOG IN</div>
-                           <div class="account-btn sign-up">SIGN UP</div>
-                        </div>
-                     </div>
-                     <div class="commercial-hr">
-                        <img src="./assets/img/hr-badge.svg" alt="" />
-                        <div class="commercial-hr commercial-details">
-                           <h1>Global Companies,<br />Meet Lebanese Talent</h1>
-                           <p>All You Need to Launch a Local Team</p>
-                        </div>
-                     </div>
                   </div>
                </div>
             </div>
