added video section + reusable sections

--- a/index.html
+++ b/index.html
@@ -18,87 +18,145 @@
          referrerpolicy="no-referrer" />
    </head>
    <body class="body">
-      <div class="hero" id="home">
-         <div class="nav-menu">
-            <div class="inner-menu">
-               <div class="left-menu">
-                  <ul>
-                     <li>Home</li>
-                     <li>Hello world!</li>
-                     <li>Milestones</li>
-                     <li>Programs</li>
-                     <li>Hire talent</li>
-                     <li>testimonials</li>
-                     <li>FAQs</li>
-                     <li>Contact us</li>
-                     <li>Partners</li>
-                     <li>Newsletter</li>
-                  </ul>
-               </div>
-               <div class="right-menu">
-                  <div class="account-credentials">
-                     <div class="header-credentials">
-                        <h1><span class="green-arrow">></span> Account</h1>
-                        <p>/* Login with existing or create a new account in order to apply to SEF programs */</p>
-                     </div>
-                     <div class="action-credentials">
-                        <div class="account-btn log-in">LOG IN</div>
-                        <div class="account-btn sign-up">SIGN UP</div>
-                     </div>
+      <main>
+         <div class="hero">
+            <div class="nav-menu">
+               <div class="inner-menu">
+                  <div class="left-menu">
+                     <ul>
+                        <li>Home</li>
+                        <li>Hello world!</li>
+                        <li>Milestones</li>
+                        <li>Programs</li>
+                        <li>Hire talent</li>
+                        <li>testimonials</li>
+                        <li>FAQs</li>
+                        <li>Contact us</li>
+                        <li>Partners</li>
+                        <li>Newsletter</li>
+                     </ul>
                   </div>
-                  <div class="commercial-hr">
-                     <img src="./assets/img/hr-badge.svg" alt="" />
-                     <div class="commercial-hr commercial-details">
-                        <h1>Global Companies,<br />Meet Lebanese Talent</h1>
-                        <p>All You Need to Launch a Local Team</p>
+                  <div class="right-menu">
+                     <div class="account-credentials">
+                        <div class="header-credentials">
+                           <h1><span class="green-arrow">></span> Account</h1>
+                           <p>/* Login with existing or create a new account in order to apply to SEF programs */</p>
+                        </div>
+                        <div class="action-credentials">
+                           <div class="account-btn log-in">LOG IN</div>
+                           <div class="account-btn sign-up">SIGN UP</div>
+                        </div>
+                     </div>
+                     <div class="commercial-hr">
+                        <img src="./assets/img/hr-badge.svg" alt="" />
+                        <div class="commercial-hr commercial-details">
+                           <h1>Global Companies,<br />Meet Lebanese Talent</h1>
+                           <p>All You Need to Launch a Local Team</p>
+                        </div>
                      </div>
                   </div>
                </div>
             </div>
+            <section class="hero-parent">
+               <header>
+                  <nav>
+                     <img src="/assets/img/se-logo.svg" alt="" />
+                     <div class="openMenu" id="nav-btn"><i class="fa fa-bars"></i></div>
+                  </nav>
+               </header>
+               <div class="hero-section hero-left">
+                  <div class="hero-section hero-left color-overlay" id="color-overlay">
+                     <div class="hero-details details-left" id="hero-left-details">
+                        <h1 class="hero-title title-left">
+                           <span class="title-span span-left">Want to become a</span>
+                           <br />
+                           <span class="hero-text-title auto-input"></span>
+                        </h1>
+                        <p class="hero-left-desc">
+                           Jumpstart your journey in tech with our courses in Computer Science, Full-Stack Web
+                           development, Data Engineering and UI/UX Design. Get hands-on experience and gain essential
+                           skills for a successful tech career.
+                        </p>
+                        <div class="hero-btn left">#GET_TRAINED</div>
+                     </div>
+                  </div>
+               </div>
+               <div class="hero-section hero-right" id="hero-right">
+                  <div class="hero-section color-overlay-right" id="color-overlay">
+                     <div class="hero-details details-right">
+                        <h1 class="hero-title title-right">
+                           <span class="title-span span-right">Want to become a</span>
+                           <br />
+                           <span class="hero-text-title">JOB-READY TECH TALENT ?</span>
+                        </h1>
+                        <p class="hero-right-desc">
+                           Look no further than our comprehensive talent matching and placement services! Our expert
+                           team will connect you with highly trained and skilled developers who are ready to hit the
+                           ground running and drive your success.
+                        </p>
+                        <div class="hero-btn right">#HIRE_TALENT</div>
+                     </div>
+                  </div>
+               </div>
+            </section>
          </div>
-         <section class="hero-parent">
-            <header>
-               <nav>
-                  <img src="/assets/img/se-logo.svg" alt="" />
-                  <div class="openMenu" id="nav-btn"><i class="fa fa-bars"></i></div>
-               </nav>
-            </header>
-            <div class="hero-section hero-left">
-               <div class="hero-section hero-left color-overlay" id="color-overlay">
-                  <div class="hero-details details-left" id="hero-left-details">
-                     <h1 class="hero-title title-left">
-                        <span class="title-span span-left">Want to become a</span>
-                        <br />
-                        <span class="hero-text-title auto-input"></span>
-                     </h1>
-                     <p class="hero-left-desc">
-                        Jumpstart your journey in tech with our courses in Computer Science, Full-Stack Web development,
-                        Data Engineering and UI/UX Design. Get hands-on experience and gain essential skills for a
-                        successful tech career.
-                     </p>
-                     <div class="hero-btn left">#GET_TRAINED</div>
-                  </div>
+         <!--Hello world ! section-->
+         <section class="start-section grey-section">
+            <div class="inner-section">
+               <div class="header-section section-title">
+                  <span class="green-arrow" style="font-size: 35px">></span> Hello Wolrd!
+               </div>
+               <div class="circles">
+                  <div class="circle-div circle-black"></div>
+                  <div class="circle-div circle-grey"></div>
+                  <div class="circle-div circle-green"></div>
                </div>
             </div>
-            <div class="hero-section hero-right" id="hero-right">
-               <div class="hero-section color-overlay-right" id="color-overlay">
-                  <div class="hero-details details-right">
-                     <h1 class="hero-title title-right">
-                        <span class="title-span span-right">Want to become a</span>
-                        <br />
-                        <span class="hero-text-title">JOB-READY TECH TALENT ?</span>
-                     </h1>
-                     <p class="hero-right-desc">
-                        Look no further than our comprehensive talent matching and placement services! Our expert team
-                        will connect you with highly trained and skilled developers who are ready to hit the ground
-                        running and drive your success.
-                     </p>
-                     <div class="hero-btn right">#HIRE_TALENT</div>
+            <div class="se-video">
+               <iframe
+                  src="https://www.youtube.com/embed/vG7SYQjODTs?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
+                  frameborder="0"
+                  allow="autoplay; encrypted-media"
+                  allowfullscreen="">
+               </iframe>
+            </div>
+         </section>
+         <section class="start-section">
+            <div class="inner-section">
+               <div class="header-section section-title"><span class="green-arrow">></span> Milestones</div>
+               <div class="circles">
+                  <div class="circle-div circle-black"></div>
+                  <div class="circle-div circle-grey"></div>
+                  <div class="circle-div circle-green"></div>
+               </div>
+            </div>
+            <div class="milestones-data">
+               <div class="inner-milestone-left">
+                  <div class="percentage">90%</div>
+                  <div class="success-rate">
+                     <h1>employment success rate</h1>
+                     <ul class="success-list">
+                        <li>Supported the employment of 250+ youth</li>
+                        <li>50% working remotely from Lebanon</li>
+                        <li>Average salary today $1,300</li>
+                     </ul>
                   </div>
+               </div>
+               <div class="inner-milestone-right"></div>
+            </div>
+         </section>
+
+         <section class="start-section">
+            <div class="inner-section">
+               <div class="header-section section-title"><span class="green-arrow">></span> prorgrams</div>
+               <div class="circles">
+                  <div class="circle-div circle-black"></div>
+                  <div class="circle-div circle-grey"></div>
+                  <div class="circle-div circle-green"></div>
                </div>
             </div>
          </section>
-      </div>
+      </main>
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
       <script src="./js/index.js"></script>
    </body>
