--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                </iframe>
             </div>
          </section>
-         <section class="start-section">
+         <section class="start-section milestones-section">
             <div class="inner-section">
                <div class="header-section section-title"><span class="green-arrow">></span> Milestones</div>
                <div class="circles">
@@ -131,24 +131,47 @@
                </div>
             </div>
             <div class="milestones-data">
-               <div class="inner-milestone-left">
+               <div class="inner-milestone milestone-left">
                   <div class="percentage">90%</div>
                   <div class="success-rate">
                      <h1>employment success rate</h1>
                      <ul class="success-list">
-                        <li>Supported the employment of 250+ youth</li>
-                        <li>50% working remotely from Lebanon</li>
-                        <li>Average salary today $1,300</li>
+                        <li>- Supported the employment of 250+ youth</li>
+                        <li>- 50% working remotely from Lebanon</li>
+                        <li>- Average salary today $1,300</li>
                      </ul>
                   </div>
                </div>
-               <div class="inner-milestone-right"></div>
+               <div class="inner-milestone milestone-right">
+                  <div class="upper-right-milestone">
+                     <div class="inner-milestone trained">
+                        <h1>1,000+</h1>
+                        <p class="inner-p">youth trained since 2016</p>
+                     </div>
+                     <div class="inner-milestone hiring-companies">
+                        <div class="hiring-inner">10+</div>
+                        <p class="inner-p">youth trained since 2016</p>
+                     </div>
+                  </div>
+                  <div class="inner-milestone lower-right-milestone">
+                     <div class="inner-milestone grads">
+                        <div class="grads-number">10+</div>
+                        <p class="inner-p">hiring countries</p>
+                     </div>
+                     <div class="inner-milestone recruitment-global">
+                        <div class="rec-number">220+</div>
+                        <p class="inner-p">global recruitment partner companies</p>
+                     </div>
+                  </div>
+               </div>
             </div>
          </section>
 
-         <section class="start-section">
+         <section class="start-section programs-section">
             <div class="inner-section">
-               <div class="header-section section-title"><span class="green-arrow">></span> prorgrams</div>
+               <div class="header-section section-title programs-title">
+                  <span class="green-arrow">></span> Prorgrams
+               </div>
                <div class="circles">
                   <div class="circle-div circle-black"></div>
                   <div class="circle-div circle-grey"></div>
