added favicon + fixing bugs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="icon" type="image/x-icon" href="./assets/img/seIcon.ico" />
       <title>SE Factory</title>
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,45 +19,45 @@
          referrerpolicy="no-referrer" />
    </head>
    <body class="body">
-      <main>
-         <div class="hero">
-            <div class="nav-menu">
-               <div class="inner-menu">
-                  <div class="left-menu">
-                     <ul>
-                        <li>Home</li>
-                        <li>Hello world!</li>
-                        <li>Milestones</li>
-                        <li>Programs</li>
-                        <li>Hire talent</li>
-                        <li>testimonials</li>
-                        <li>FAQs</li>
-                        <li>Contact us</li>
-                        <li>Partners</li>
-                        <li>Newsletter</li>
-                     </ul>
-                  </div>
-                  <div class="right-menu">
-                     <div class="account-credentials">
-                        <div class="header-credentials">
-                           <h1><span class="green-arrow">></span> Account</h1>
-                           <p>/* Login with existing or create a new account in order to apply to SEF programs */</p>
-                        </div>
-                        <div class="action-credentials">
-                           <div class="account-btn log-in">LOG IN</div>
-                           <div class="account-btn sign-up">SIGN UP</div>
-                        </div>
+      <main class="main-section">
+         <div class="nav-menu">
+            <div class="inner-menu">
+               <div class="left-menu">
+                  <ul>
+                     <li>Home</li>
+                     <li>Hello world!</li>
+                     <li>Milestones</li>
+                     <li>Programs</li>
+                     <li>Hire talent</li>
+                     <li>testimonials</li>
+                     <li>FAQs</li>
+                     <li>Contact us</li>
+                     <li>Partners</li>
+                     <li>Newsletter</li>
+                  </ul>
+               </div>
+               <div class="right-menu">
+                  <div class="account-credentials">
+                     <div class="header-credentials">
+                        <h1><span class="green-arrow">></span> Account</h1>
+                        <p>/* Login with existing or create a new account in order to apply to SEF programs */</p>
                      </div>
-                     <div class="commercial-hr">
-                        <img src="./assets/img/hr-badge.svg" alt="" />
-                        <div class="commercial-hr commercial-details">
-                           <h1>Global Companies,<br />Meet Lebanese Talent</h1>
-                           <p>All You Need to Launch a Local Team</p>
-                        </div>
+                     <div class="action-credentials">
+                        <div class="account-btn log-in">LOG IN</div>
+                        <div class="account-btn sign-up">SIGN UP</div>
+                     </div>
+                  </div>
+                  <div class="commercial-hr">
+                     <img src="./assets/img/hr-badge.svg" alt="" />
+                     <div class="commercial-hr commercial-details">
+                        <h1>Global Companies,<br />Meet Lebanese Talent</h1>
+                        <p>All You Need to Launch a Local Team</p>
                      </div>
                   </div>
                </div>
             </div>
+         </div>
+         <div class="hero">
             <section class="hero-parent">
                <header>
                   <nav>
@@ -101,6 +102,7 @@
             </section>
          </div>
          <!--Hello world ! section-->
+
          <section class="start-section grey-section">
             <div class="inner-section">
                <div class="header-section section-title">
@@ -117,10 +119,13 @@
                   src="https://www.youtube.com/embed/vG7SYQjODTs?rel=0&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0"
                   frameborder="0"
                   allow="autoplay; encrypted-media"
-                  allowfullscreen="">
+                  allowfullscreen=""
+                  style="width: 100%; height: 100%">
                </iframe>
             </div>
          </section>
+
+         <!--milestones section-->
          <section class="start-section milestones-section">
             <div class="inner-section">
                <div class="header-section section-title"><span class="green-arrow">></span> Milestones</div>
@@ -155,12 +160,15 @@
                   </div>
                   <div class="inner-milestone lower-right-milestone">
                      <div class="inner-milestone grads">
-                        <div class="grads-number">10+</div>
-                        <p class="inner-p">hiring countries</p>
+                        <div class="grads-number">300+</div>
+                        <p class="inner-p">graduated Full-Stack web developers</p>
                      </div>
                      <div class="inner-milestone recruitment-global">
                         <div class="rec-number">220+</div>
-                        <p class="inner-p">global recruitment partner companies</p>
+                        <p class="inner-p" style="font-size: 15px; font-weight: normal">
+                           global recruitment<br />
+                           partner companies
+                        </p>
                      </div>
                   </div>
                </div>
