--- a/index.html
+++ b/index.html
@@ -180,10 +180,89 @@
                <div class="header-section section-title programs-title">
                   <span class="green-arrow">></span> Prorgrams
                </div>
-               <div class="circles">
-                  <div class="circle-div circle-black"></div>
-                  <div class="circle-div circle-grey"></div>
-                  <div class="circle-div circle-green"></div>
+               <div class="circles-p">
+                  <div class="circle-div-p"></div>
+                  <div class="circle-div-p"></div>
+                  <div class="circle-div-p circle-black"></div>
+               </div>
+            </div>
+            <div class="tabs">
+               <ul class="tabs-list">
+                  <li data-tab-target="#fcs-content" class="active tab">FCS</li>
+                  <li data-tab-target="#fsw-content" class="tab">FSW</li>
+                  <li data-tab-target="#fsd-content" class="tab">FSD</li>
+                  <li data-tab-target="#ui-content" class="tab">UI/UX</li>
+               </ul>
+               <div data-tab-content id="fcs-content" class="active">
+                  <div class="inner-tab">
+                     <div class="tab-title"><span class="tab-span">> FCS:</span> Foundations of Computer Science</div>
+                     <p class="tab-desc">
+                        // This 9-week course covers fundamental topics in computer science, including data structures,
+                        algorithms, and foundational concepts. It is suitable for coding enthusiasts, former computer
+                        science students, and beginners who wish to learn Python programming, object-oriented
+                        programming, file systems, and more. The course includes online video materials, assignments,
+                        and instructor-led sessions.
+                     </p>
+                     <div class="tab-bottom">
+                        <div class="nxt-course">next course date | <span class="tab-span">To be confirmed</span></div>
+                        <div class="learn">LEARN MORE ></div>
+                     </div>
+                  </div>
+               </div>
+               <div data-tab-content id="fsw-content">
+                  <div class="inner-tab">
+                     <div class="tab-title"><span class="tab-span">> FSW:</span> Full-Stack Web Development</div>
+                     <p class="tab-desc">
+                        // Our 14-week bootcamp is designed to equip aspiring developers with the technical and
+                        interpersonal skills needed to become professional software engineers. Participants will learn
+                        essential concepts such as Version Control, Object-Oriented Programming, Database Management
+                        Systems, MVC Design Patterns, Dependency Management, modern Web Frameworks, and AWS. The program
+                        also includes a soft-skills curriculum covering Communication & Interpersonal Skills,
+                        Professional Writing, Technical Presentations, Negotiation, and Interviewing, which will be
+                        taught through lectures, weekly projects, tech talks, and a final project to showcase their
+                        learning.
+                     </p>
+                     <div class="tab-bottom">
+                        <div class="nxt-course">next course date | <span class="tab-span">To be confirmed</span></div>
+                        <div class="learn">LEARN MORE ></div>
+                     </div>
+                  </div>
+               </div>
+               <div data-tab-content id="fsd-content">
+                  <div class="inner-tab">
+                     <div class="tab-title"><span class="tab-span">> FSD:</span> Full-Stack Data</div>
+                     <p class="tab-desc">
+                        // SE Factory's 12-week Full-Stack Data course offers robust training in data analysis and
+                        engineering. Participants learn to handle large data sets with Python and use libraries like
+                        Pandas, NumPy, and Matplotlib for data manipulation and visualization. The course also delves
+                        into cloud orchestration, distributed computing, relational databases, and SQL basics. Hands-on
+                        projects provide real-world data analysis experience. Upon completion, students gain proficiency
+                        in Python for analytics, understand data warehousing, and can effectively visualize and present
+                        data insights.
+                     </p>
+                     <div class="tab-bottom">
+                        <div class="nxt-course">next course date | <span class="tab-span">To be confirmed</span></div>
+                        <div class="learn">LEARN MORE ></div>
+                     </div>
+                  </div>
+               </div>
+               <div data-tab-content id="ui-content">
+                  <div class="inner-tab">
+                     <div class="tab-title"><span class="tab-span">> UIX:</span> UI/UX Design Bootcamp</div>
+                     <p class="tab-desc">
+                        // SE Factory's 6-week UI/UX course offers immersive learning in UI/UX design. It encompasses
+                        the essentials of UI/UX, from mastering Figma, color psychology, typography to UX heuristics,
+                        prototyping and WCAG guidelines. Learners work on projects, transforming wireframes into
+                        mockups, and creating responsive interfaces. The course culminates in a final project, enabling
+                        students to conduct a thorough UX audit, revamp a website, and create a well-documented case
+                        study. Graduates leave equipped with a polished portfolio and market-ready skills in UI/UX
+                        design.
+                     </p>
+                     <div class="tab-bottom">
+                        <div class="nxt-course">next course date | <span class="tab-span">To be confirmed</span></div>
+                        <div class="learn">LEARN MORE ></div>
+                     </div>
+                  </div>
                </div>
             </div>
          </section>
